--- a/package.json
+++ b/package.json
@@ -6,14 +6,39 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:push": "npx drizzle-kit push",
+    "db:studio": "npx drizzle-kit studio"
   },
   "dependencies": {
+    "@clerk/elements": "^0.15.9",
+    "@clerk/nextjs": "^5.7.1",
+    "@google/generative-ai": "^0.21.0",
+    "@neondatabase/serverless": "^0.9.5",
+    "@radix-ui/react-context": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-menu": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "drizzle-orm": "^0.33.0",
+    "lucide-react": "^0.447.0",
+    "moment": "^2.30.1",
+    "next": "14.2.14",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.14"
+    "react-icons": "^5.3.0",
+    "react-webcam": "^7.2.0",
+    "tailwind-merge": "^2.5.3",
+    "tailwindcss-animate": "^1.0.7",
+    "tslib": "^2.7.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "drizzle-kit": "^0.24.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
